<resources>
    <string name="app_name">FamilyLink</string>
    <string name="btnConfirmTitle">CONNECT</string>
    <string name="config_instruction">Five seconds after the gateway is powered on, press the gateway button for a long time until the gateway sends out the "beep" two-tone release button</string>
    <string name="how_to_config">Please make sure the blue light of the connector flashes and then press "next step".</string>
    <string name="next">NEXT</string>
    <string name="retry">RETRY</string>
    <string name="please_input_email">Enter email ID</string>
    <string name="code_hint">Verification code</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="loading_press">Loading..</string>
    <string name="dialog_btn_confim">Confirm</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_title_alert">Alert</string>
    <string name="home_mode">Home</string>
    <string name="out_mode">Away</string>
    <string name="sleep_mode">Sleep</string>
    <string name="downing">Downloading</string>
    <string name="insert_card">insert card</string>
    <string name="new_version">new</string>
    <string name="app_version_hint">APP Ver</string>
    <string name="please_input_complete">Please input complete</string>
    <string name="password_hint">Input Password</string>
    <string name="wifi_password_hint">Input Wifi Password</string>
    <string name="about">About</string>
    <string name="phone_register">By Phone</string>
    <string name="email_register">By Email</string>
    <string name="phone_find">By Phone</string>
    <string name="email_find">By Email</string>
    <string name="get_code">Send</string>
    <string name="pwd_help">Password Assistance</string>
    <string name="code_fault">Password Error</string>
    <string name="delete_or_not">Are you sure to delete？</string>
    <string name="ok">OK</string>
    <string name="success">Success!</string>
    <string name="cancel">Cancel</string>
    <string name="delete_success">Delete success!</string>
    <string name="update_alert">Update</string>
    <string name="system_scene">Scene</string>
    <string name="choose_color">Connector Color</string>
    <string name="get_max_scene_group">You get the max 8 Scene!</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="replace_equipment">Replace</string>
    <string name="delete_equipment">Delete</string>
    <string name="want_to_delete_confirm_eq">Do you wanna remove %1$s？</string>
    <string name="delete">Delete</string>
    <string name="operation_success">Operation success</string>
    <string name="operation_failed">Operation failed</string>
    <string name="please_input_name">Enter name</string>
    <string name="one_condition">Devices act by One condition</string>
    <string name="all_condition">Devices act by All conditions</string>
    <string name="choose_condition">Choose Condition</string>
    <string name="one_condition_hint">If you add one or more startup conditions, ’Auto Action’ will be executed while reaching any one of the conditions. </string>
    <string name="all_condition_hint_one">If you add one or more startup conditions, ’Auto Action’ will be executed while reaching all of the conditions. </string>
    <string name="all_condition_hint_two">If you only add only one start condition, the task is fulfilled at that time.</string>
    <string name="all_condition_hint_three">Here, simultaneous fulfillment refers to the simultaneous fulfillment of entity equipment conditions, excluding virtual devices: click execution, timing execution.</string>
    <string name="all_condition_hint_four">If you do not understand the functionality of this option, select the default option or consult us.</string>
    <string name="my_scene">My_Auto_</string>
    <string name="name_is_null">The name cannot be empty</string>
    <string name="name_is_too_long">Name is too long</string>
    <string name="name_contain_emoji">Name cannot contain emoji</string>
    <string name="name_is_illegal">Name has illegal characters</string>
    <string name="output_must_has_eq">Output must have Device</string>
    <string name="intput_must_has_eq">Execution condition cannot be empty</string>
    <string name="no_data">No data</string>
    <string name="increase_input">Add conditions</string>
    <string name="increase_output">Add actions</string>
    <string name="condition">Conditions</string>
    <string name="action">Perform the following actions in sequence</string>
    <string name="scene_has_modify">Auto has been changed, do you want to save the changes?</string>
    <string name="hour_and_min">hour/min</string>
    <string name="week">Week</string>
    <string name="set_first">Please set first</string>
    <string name="set_weekday">Please set weekday</string>
    <string name="set_delay">Please set delay</string>
    <string name="offline">Offline</string>
    <string name="alarm">Alarm</string>
    <string name="help">Help</string>
    <string name="normal">Normal</string>
    <string name="silence">Silence</string>
    <string name="test">Test</string>
    <string name="update_name">Update Name</string>
    <string name="door_open">Open</string>
    <string name="door_still_open">Await</string>
    <string name="Illegal_demolition">Illegal demolition</string>
    <string name="has_been_moved">Has been moved</string>
    <string name="has_people">Trigger</string>
    <string name="net_configuration">Net Configuration</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="is_connected_to_wifi">%1$s is connected to WI-FI</string>
    <string name="esptouch_is_configuring">Connector is configuring, please wait for a moment...</string>
    <string name="is_config">Connecting device, do not do other operations!</string>
    <string name="failed">Failed</string>
    <string name="failed_Esptouch_check_eq">Config Failed:Confirm Connector being Configing,or Connector has Problem</string>
    <string name="wait">Waiting..</string>
    <string name="sale_number">After Service</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="please_choose_device">Choose Gateway</string>
    <string name="add_device_hint">Please quickly press the button of needed device 3 times.</string>
    <string name="done">Done</string>
    <string name="cxalert2">Fault</string>
    <string name="cxalert5">Silence</string>
    <string name="cxalert6">Silence</string>
    <string name="cxalert7">Test Alarm</string>
    <string name="cxalert9">Fire alarm</string>
    <string name="cxalert11">Silence</string>
    <string name="low_battery">Low voltage</string>
    <string name="door">Door</string>
    <string name="socket">Socket</string>
    <string name="soskey">Soskey</string>
    <string name="pir">PIR</string>
    <string name="coalarm">CO alarm</string>
    <string name="gasalarm">GAS alarm</string>
    <string name="thermalalarm">Thermal</string>
    <string name="smalarm">Smoke alarm</string>
    <string name="wt">WaterCheck</string>
    <string name="thcheck">THCheck</string>
    <string name="button">Button</string>
    <string name="cxsmalarm">CXSmoke</string>
    <string name="mode_button">ModeButton</string>
    <string name="lock">Lock</string>
    <string name="gateway">Connector</string>
    <string name="phone">Phone</string>
    <string name="delay">Delay</string>
    <string name="clickTo">Click</string>
    <string name="timer">Timer</string>
    <string name="sthalert">Alert</string>
    <string name="save">Save</string>
    <string name="no_save">No Save</string>
    <string name="on_line">Online</string>
    <string name="off_line">Offline</string>
    <string name="btn_silence">Silence</string>
    <string name="user_change_password">Confirm changes</string>
    <string name="user_change_password_hint_old_password">Old password</string>
    <string name="user_change_password_hint_new_password">New password</string>
    <string name="user_change_password_hint_new_password_confirm">Password confirm</string>
    <string name="user_change_password_error_passwnotequal">Two passwords are inconsistent!</string>
    <string name="device_login_input_password">Please enter the device login password.</string>
    <string name="device_opt_picture_list">Device photos</string>
    <string name="device_opt_record_list">Device video</string>
    <string name="device_opt_set_wifi">SET WiFi</string>
    <string name="device_opt_set_wifi_info_error">Current Wifi information error</string>
    <string name="device_opt_set_wifi_hint_ssid">WiFi SSID</string>
    <string name="device_system_info_sn">Info SN</string>
    <string name="device_system_info_model">Info Model</string>
    <string name="device_system_info_nat_code">Nat Code</string>
    <string name="device_system_info_nat_status">Nat Status</string>
    <string name="device_net_connect_type_p2p">P2P</string>
    <string name="device_net_connect_type_transmit">type_transmit</string>
    <string name="device_net_connect_type_ip">type_IP</string>
    <string name="device_net_connect_type_rps">RPS</string>
    <string name="device_net_connect_type_unknown">type_unknown</string>
    <string name="device_setup_record">Record Setting</string>
    <string name="device_setup_expert">Expert Configuration</string>
    <string name="common">Information</string>
    <string name="device_setup_storage">Storage Configuration</string>
    <string name="device_setup_change_password">Setting Password</string>
    <string name="device_time_in_AP_or_local_mode">Please synchronize time in AP mode or local mode</string>
    <string name="device_setup_camera_flip">Camera flip</string>
    <string name="device_setup_camera_mirror">Camera mirror</string>
    <string name="device_setup_record_second">sec</string>
    <string name="device_setup_record_minute">min</string>
    <string name="device_setup_record_prerecord">Pre-recorded</string>
    <string name="device_setup_record_prerecord_prompt">Control to produce linkage recording, advance pre recorded time.</string>
    <string name="device_setup_record_length">Record Length</string>
    <string name="device_setup_record_mode">Record Mode</string>
    <string name="device_setup_record_audio">Record Audio</string>
    <string name="device_setup_storage_capacity">Storage capacity:</string>
    <string name="device_setup_storage_remain">Storage remain:</string>
    <string name="device_setup_storage_format">Storage format</string>
    <string name="device_setup_storage_record_full">Record full:</string>
    <string name="device_setup_storage_record_stop">Stop record</string>
    <string name="device_setup_storage_record_cycle">Loop record</string>
    <string name="device_setup_storage_format_tip">Do you want to format the device disk?</string>
    <string name="user_forget_pwd_reset_passw_success">Reset Password Success</string>
    <string name="device_socket_capture_preview">Preview</string>
    <string name="device_socket_capture_save_success">Save success  %1$s</string>
    <string name="device_socket_capture_delete_success">Delete success</string>
    <string name="device_sport_camera_download_to_phone">Download to phone</string>
    <string name="device_sport_camera_normal_pic">Normal pic</string>
    <string name="wifi_config">Add new camera</string>
    <string name="add_camera">Add IPC</string>
    <string name="camera_empety_sn">Please enter the serial number</string>
    <string name="ipc_tip">If the device has been added to the router, please press the SET button on the back (or bottom) of the device to restore the factory settings.</string>
    <string name="add_share_ipc">Add a shared IPC</string>
    <string name="add_localnet_ipc">Add the IPC under the same router</string>
    <string name="param_setting">Param Setting</string>
</resources>