<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/margin_50"
       android:background="@color/color_white">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:text="@string/param_setting"
          android:textColor="@color/top_bar_title"
          android:textSize="@dimen/title_size" />

      <ImageView
          android:id="@+id/iv_param_back"
          android:layout_width="@dimen/back_image_width"
          android:layout_height="@dimen/back_image_height"
          android:padding="@dimen/margin_3"
          android:layout_centerVertical="true"
          android:layout_marginStart="@dimen/back_image_marginLeft"
          android:src="@mipmap/back"/>

      <ImageView
          android:id="@+id/iv_param_setting"
          android:layout_marginEnd="@dimen/setting_marginRight"
          android:src="@mipmap/icon_correct"
          android:layout_gravity="end"
          android:layout_width="@dimen/setting_width"
          android:layout_height="@dimen/setting_height"
          android:layout_alignParentEnd="true"
          android:layout_centerVertical="true"/>
   </RelativeLayout>
   <View
       android:layout_width="match_parent"
       android:layout_height="@dimen/margin_1"
       android:background="@color/top_bar_line" />

   <com.ilop.sthome.view.SettingIpcItem
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:accessoryType = "none"
       app:Divider="true"
       app:detailText=""
       app:titleText="@string/device_setup_record_prerecord"
       app:subTitleText="@string/device_setup_record_prerecord_prompt"
       android:id="@+id/yulu"/>

   <com.ilop.sthome.view.SettingIpcItem
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:accessoryType = "none"
       app:Divider="true"
       app:detailText=""
       app:titleText="@string/device_setup_record_length"
       android:id="@+id/luxiangshichang"/>

   <com.ilop.sthome.view.SettingIpcItem
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:accessoryType = "spinner"
       app:Divider="true"
       app:titleText="@string/device_setup_record_mode"
       android:id="@+id/luxiangtype"/>
   <com.ilop.sthome.view.SettingIpcItem
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:accessoryType = "switchbutton"
       app:Divider="true"
       app:titleText="@string/device_setup_record_audio"
       android:id="@+id/luxiangauto"/>

</LinearLayout>

</layout>