<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50">

            <TextView
                style="@style/TabTitleTextView"
                android:text="@string/add_camera"/>

            <ImageView
                android:id="@+id/iv_add_camera_back"
                style="@style/TabBackImageView"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/top_bar_line" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:background="@color/main_ground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <com.ilop.sthome.view.SettingItem
                    android:id="@+id/add_new_ipc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    app:item_accessoryType = "arrow"
                    app:item_showDivider="false"
                    app:item_background = "true"
                    app:item_titleText="@string/official_website" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_line"
                    android:textSize="@dimen/text_12"
                    android:text="@string/ipc_tip"
                    android:layout_margin="@dimen/margin_15"/>
                <com.ilop.sthome.view.SettingItem
                    android:id="@+id/add_share_ipc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    app:item_accessoryType = "arrow"
                    app:item_showDivider="false"
                    app:item_background = "true"
                    app:item_titleText="@string/add_share_ipc" />
                <com.ilop.sthome.view.SettingItem
                    android:id="@+id/add_local_ipc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    app:item_accessoryType = "arrow"
                    app:item_showDivider="false"
                    app:item_background = "true"
                    app:item_titleText="@string/add_localnet_ipc" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>