<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/margin_4"
                android:layout_height="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"
                android:background="@drawable/round_vertical_line"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_10"
                android:textSize="@dimen/text_20"
                android:textColor="@color/black"
                android:text="@string/dialog_title_alert"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/margin_120"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_27"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_20"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                android:text="@string/app_name"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_20"
                android:gravity="center_vertical">
                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/margin_60"
                    android:paddingStart="@dimen/margin_10"
                    android:hint="@string/please_input_name"
                    android:background="@null"/>
                <ImageView
                    android:id="@+id/iv_eyes"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:src="@mipmap/icon_eye_close"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_20"
                android:text="@string/dialog_btn_cancel"/>
            <TextView
                android:id="@+id/tv_dialog_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_10"
                android:textSize="@dimen/text_16"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:text="@string/dialog_btn_confim"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>