<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/margin_50"
			android:background="@color/color_white">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:text="@string/wifi_config"
				android:textColor="@color/top_bar_title"
				android:textSize="@dimen/title_size" />

			<ImageView
				android:id="@+id/iv_wifi_config_back"
				android:layout_width="@dimen/back_image_width"
				android:layout_height="@dimen/back_image_height"
				android:padding="@dimen/margin_3"
				android:layout_centerVertical="true"
				android:layout_marginStart="@dimen/back_image_marginLeft"
				android:src="@mipmap/back"/>

		</RelativeLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/top_bar_line" />
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="50dp"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginEnd="@dimen/margin_20"
				android:orientation="horizontal"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:layout_width="@dimen/margin_24"
					android:layout_height="@dimen/margin_24"
					android:src="@mipmap/icon_input_wifi" />

				<EditText
					android:id="@+id/editWifiSSID"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="@dimen/margin_10"
					android:layout_marginStart="@dimen/margin_10"
					android:background="@null"
					android:gravity="center_vertical"
					android:hint="@string/device_opt_set_wifi_hint_ssid"
					android:singleLine="true"
					android:textColor="@color/black"
					android:textSize="16sp"/>
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/margin_1"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginEnd="@dimen/margin_20"
				android:background="@color/top_bar_line" />

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="50dp"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginEnd="@dimen/margin_20"
				android:orientation="horizontal"
				android:background="@color/white"
				android:gravity="center_vertical">

				<ImageView
					android:layout_width="@dimen/margin_24"
					android:layout_height="@dimen/margin_24"
					android:src="@mipmap/icon_input_pwd" />

				<com.ilop.sthome.view.CodeEdit
					android:id="@+id/editWifiPasswd"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginStart="10dp"
					app:code_can_see = "false"
					android:paddingStart="@dimen/margin_10"
					app:hint_text="@string/wifi_password_hint"/>
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/margin_1"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginEnd="@dimen/margin_20"
				android:background="@color/top_bar_line" />
		</LinearLayout>

		<Button
			android:id="@+id/btnWifiQuickSetting"
			android:layout_width="match_parent"
			android:layout_height="@dimen/margin_58"
			android:layout_marginTop="@dimen/margin_50"
			android:layout_marginStart="@dimen/margin_20"
			android:layout_marginEnd="@dimen/margin_20"
			android:background="@mipmap/blue_bg"
			android:gravity="center"
			android:paddingBottom="@dimen/margin_10"
			android:text="@string/device_opt_set_wifi"
			android:textColor="@color/white"
			android:textSize="18sp" />

	</LinearLayout>
</layout>