<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/margin_50"
			android:background="@color/color_white">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:text="@string/device_setup_change_password"
				android:textColor="@color/top_bar_title"
				android:textSize="@dimen/title_size" />

			<ImageView
				android:id="@+id/iv_pwd_back"
				android:layout_width="@dimen/back_image_width"
				android:layout_height="@dimen/back_image_height"
				android:padding="@dimen/margin_3"
				android:layout_centerVertical="true"
				android:layout_marginStart="@dimen/back_image_marginLeft"
				android:src="@mipmap/back"/>

		</RelativeLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/top_bar_line" />

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true"
			android:scrollbars="none">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.example.common.view.CustomEditText
					android:id="@+id/et_old_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/margin_20"
					android:layout_marginEnd="@dimen/margin_20"
					android:layout_marginTop="@dimen/margin_20"
					app:drawable="@mipmap/icon_pwd"
					app:rightButton="@mipmap/icon_eye_close"
					app:hintColor="@color/main_color"
					app:hintSize="@dimen/text_12"
					app:inputColor="@color/black"
					app:inputHint="@string/user_change_password_hint_old_password"
					app:inputSize="@dimen/text_16"
					app:inputType="text"
					app:inputBackground="@null"
					app:inputHeight="@dimen/margin_60"
					app:drawablePadding="@dimen/margin_20"
					app:btnType = "eyes"
					app:btnVisibility="gone"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/margin_1"
					android:background="@color/top_bar_line"
					android:layout_marginStart="@dimen/margin_20"
					android:layout_marginEnd="@dimen/margin_20"/>

				<com.example.common.view.CustomEditText
					android:id="@+id/et_new_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/margin_20"
					android:layout_marginEnd="@dimen/margin_20"
					android:layout_marginTop="@dimen/margin_20"
					app:drawable="@mipmap/icon_pwd"
					app:rightButton="@mipmap/icon_eye_close"
					app:hintColor="@color/main_color"
					app:hintSize="@dimen/text_12"
					app:inputColor="@color/black"
					app:inputHint="@string/user_change_password_hint_new_password"
					app:inputSize="@dimen/text_16"
					app:inputType="textPassword"
					app:inputBackground="@null"
					app:inputHeight="@dimen/margin_60"
					app:drawablePadding="@dimen/margin_20"
					app:btnType = "eyes"
					app:btnVisibility="visible"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/margin_1"
					android:background="@color/top_bar_line"
					android:layout_marginStart="@dimen/margin_20"
					android:layout_marginEnd="@dimen/margin_20"/>

				<com.example.common.view.CustomEditText
					android:id="@+id/et_confirm_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/margin_20"
					android:layout_marginEnd="@dimen/margin_20"
					android:layout_marginTop="@dimen/margin_20"
					app:drawable="@mipmap/icon_pwd"
					app:rightButton="@mipmap/icon_eye_close"
					app:hintColor="@color/main_color"
					app:hintSize="@dimen/text_12"
					app:inputColor="@color/black"
					app:inputHint="@string/user_change_password_hint_new_password_confirm"
					app:inputSize="@dimen/text_16"
					app:inputType="textPassword"
					app:inputBackground="@null"
					app:inputHeight="@dimen/margin_60"
					app:drawablePadding="@dimen/margin_20"
					app:btnType = "eyes"
					app:btnVisibility="visible"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/margin_1"
					android:background="@color/top_bar_line"
					android:layout_marginStart="@dimen/margin_20"
					android:layout_marginEnd="@dimen/margin_20"/>

				<Button
					android:id="@+id/bt_change_password"
					android:layout_width="match_parent"
					android:layout_height="@dimen/margin_58"
					android:paddingBottom="@dimen/margin_10"
					android:gravity="center"
					android:layout_marginTop="@dimen/margin_50"
					android:layout_marginStart="@dimen/margin_20"
					android:layout_marginEnd="@dimen/margin_20"
					android:layout_marginBottom="@dimen/margin_20"
					android:text="@string/user_change_password"
					android:textColor="@color/white"
					android:textSize="@dimen/text_18"
					android:background="@mipmap/blue_bg"/>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</layout>
