<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@color/white">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/margin_50"
			android:background="@color/color_white">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:text="@string/wifi_config"
				android:textColor="@color/top_bar_title"
				android:textSize="@dimen/title_size" />

			<ImageView
				android:id="@+id/iv_wifi_config_back"
				android:layout_width="@dimen/back_image_width"
				android:layout_height="@dimen/back_image_height"
				android:padding="@dimen/margin_3"
				android:layout_centerVertical="true"
				android:layout_marginStart="@dimen/back_image_marginLeft"
				android:src="@mipmap/back"/>

		</RelativeLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/top_bar_line" />

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/margin_20"
			android:background="@color/line_bg" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<com.example.common.view.CustomEditText
				android:id="@+id/editSN"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_10"
				android:layout_marginEnd="@dimen/margin_10"
				app:hintColor="@color/main_color"
				app:hintSize="@dimen/text_12"
				app:inputColor="@color/black"
				app:inputHint="@string/camera_empety_sn"
				app:inputSize="@dimen/text_16"
				app:inputBackground="@null"
				app:inputHeight="@dimen/margin_60"
				app:drawablePadding="@dimen/margin_20"/>

			<ImageView
				android:id="@+id/btnScanCode"
				android:layout_width="@dimen/margin_50"
				android:layout_height="@dimen/margin_50"
				android:padding="@dimen/margin_05"
				android:src="@mipmap/icon_scan"/>
		</LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_20"
            android:background="@color/line_bg" />

		<Button
			android:id="@+id/btnWifiQuickAdd"
			android:layout_width="match_parent"
			android:layout_height="@dimen/margin_58"
			android:layout_marginStart="@dimen/margin_20"
			android:layout_marginEnd="@dimen/margin_20"
			android:layout_marginTop="@dimen/margin_60"
			android:background="@mipmap/blue_bg"
			android:gravity="center"
			android:paddingBottom="@dimen/margin_10"
			android:text="@string/add_camera"
			android:textColor="@color/white"
			android:textSize="@dimen/text_18" />

	</LinearLayout>
</layout>